fixing sand out of bounds exception

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+    background-color: bisque;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -10,4 +14,5 @@
 .canvas {
     max-width: max-content;
     max-height: max-content;
+    background-color: aliceblue;
 }
